thanos-query-global/thanos-query-global-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query-global
  namespace: thanos
  labels:
    app: thanos-query-global
spec:
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 9090
    targetPort: http
  selector:
    app: thanos-query-global
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query-nodeport
  namespace: thanos
  labels:
    app: thanos-query-global
spec:
  type: NodePort
  selector:
    app: thanos-query-global
  ports:
  - name: alertmanager
    protocol: TCP
    port: 9090
    targetPort: 9090
    nodePort: 30010
