thanos-query-global/thanos-query-global-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-query-global-tls
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-query.com`)
      kind: Rule
      services:
        - name: thanos-query-global
          port: 9090
  tls:
    secretName: thanos-querier-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-query-global
  namespace: thanos
spec:
  routes:
    - match: Host(`thanos-query.com`)
      kind: Rule
      services:
        - name: thanos-query-global
          port: 9090
